--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ MarkupSafe==1.0
 numpy==1.15.4
 Pillow==5.3.0
 protobuf==3.6.1
-PyYAML==3.13
+PyYAML>=4.2b1
 requests==2.20.1
 scipy==1.1.0
 six==1.11.0
